--- a/pre/template.html
+++ b/pre/template.html
@@ -38,9 +38,9 @@
                 <div class="chart__footer">
                     <div class="chart__source">
                         <p class="chart__source--data"><span>Fuente: </span><span id="data-source">Tablas de mortalidad (INE) y Departamento de Población, CSIC</span></p>
-                        <p class="chart__source--note" id="data-note"></p>
                         <p class="chart__source--copyright"><a class="link" href="https://creativecommons.org/licenses/by/4.0/deed.en_US" target="_blank">CC BY 4.0</a></p>
                     </div>
+                    <p class="chart__note"><span>Notas: </span><span id="data-note"></span></p>
                 </div>
                 <div class="logo">
                     <img src="https://raw.githubusercontent.com/EnvejecimientoEnRed/envejecimiento_centenarios-supervivientes_evolucion/main/pre/cchs.png" alt="Logo del Centro de Ciencias Humanas y Sociales" width="100%" height="100%">
