Información de dos primeros bloques

--- a/pre/template.html
+++ b/pre/template.html
@@ -17,14 +17,14 @@
         <div class="main">
             <section class="content b-chart active" id="chartBlock">
                 <div class="b-title">
-                    <h1 class="title" id="title">Evolución de la supervivencia en España a los 65, 85 y 100 años</h1>
-                    <h2 class="subtitle" id="subtitle">Gráfico 10/2021. Datos entre 1991 y 2019. Datos a nivel nacional.</h2>
+                    <h1 class="title" id="title"></h1>
+                    <h2 class="subtitle" id="subtitle"></h2>
                 </div>
                 <div class="chart__logics">
                     <div class="chart__legend">
-                        <span class="chart__legend--item first">65 años</span>
-                        <span class="chart__legend--item second">85 años</span>
-                        <span class="chart__legend--item third">100 y más años</span>
+                        <span class="chart__legend--item first">Ley. 1</span>
+                        <span class="chart__legend--item second">Ley. 2</span>
+                        <span class="chart__legend--item third">Ley. 3</span>
                     </div>
                     <div class="chart__animate" id="replay">
                         <button class="btn btn__animate">
@@ -37,7 +37,7 @@
                 <!-- Pie de gráfico -->
                 <div class="chart__footer">
                     <div class="chart__source">
-                        <p class="chart__source--data"><span>Fuente: </span><span id="data-source">Tablas de mortalidad (INE) y Departamento de Población, CSIC</span></p>
+                        <p class="chart__source--data"><span>Fuente: </span><span id="data-source"></span> y Departamento de Población, CSIC</p>
                         <p class="chart__source--copyright"><a class="link" href="https://creativecommons.org/licenses/by/4.0/deed.en_US" target="_blank">CC BY 4.0</a></p>
                     </div>
                     <p class="chart__note"><span>Notas: </span><span id="data-note"></span></p>
